[package]
name = "strife"
version = "0.3.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "A lightweight library for the Discord API."
license = "MIT"
readme = "README.md"

documentation = "https://docs.rs/strife"
homepage = "https://github.com/Juici/strife"
repository = "https://github.com/Juici/strife"

categories = ["api-bindings", "asynchronous"]
keywords = ["discord", "api", "async"]

edition = "2018"

[features]
default = ["systime_ratelimits"]
systime_ratelimits = []

[dependencies]
base64 = "0.11"
bitflags = "1.2"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.13"
hyper-tls = "0.4"
int-enum = { version = "0.3", features = ["serialize", "convert"] }
log = "0.4"
num-traits = "0.2"
remain = "0.2"
rustversion = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["sync", "time"] }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "0.2", features = ["macros"] }
